--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -37,14 +37,15 @@
                 <div class="search-widget">
                     <div class="label-text">Search Box Customization</div>
                     <div class="d-flex search-customization-input">
-                        <div class="kr-sg-input-search" (click)="selectSearchBox('inputBox');$event.stopPropagation();">                               
-                            <input type="text" placeholder="Placeholder Text" class="input-search" (click)="selectSearchBox('placeholderText');$event.stopPropagation()">
+                        <div class="kr-sg-input-search">                               
+                            <input type="text" placeholder="Placeholder Text" class="input-search" (click)="selectSearchBox('inputBox');$event.stopPropagation();">
                             <img src="assets/icons/search_gray.svg" class="search-icon" (click)="selectSearchBox('inputIcon');$event.stopPropagation()">
+                             <span (click)="selectSearchBox('placeholderText');$event.stopPropagation()"></span>
                         </div>
-                        <button class="btn-customize kr-sg-button-primary btn_lg" (click)="selectSearchBox('button')">Button</button>
+                        <button class="btn-customize kr-sg-button-primary btn_lg" (click)="selectSearchBox('button')" disabled>Button</button>
                     </div>
                     <div [ngSwitch]="selectSearch">
-                        <!-- <input
+                        <input
                             [style.background]="color"
                             [(colorPicker)]="color"
                             [cpOutputFormat]="'hex'"
@@ -54,7 +55,7 @@
                             (cpSliderDragStart)="onEventLog('cpSliderDragStart', $event)"
                             (cpSliderDragEnd)="onEventLog('cpSliderDragEnd', $event)"
                             readonly
-                          /> -->
+                          />
                     <div class="fill-colors-block"  *ngSwitchCase="'inputBox'">
                         <div class="fill-color">
                             <div class="label-color">Fill Color</div>                            
