--- a/findly-builder/src/app/components/structured-data/structured-data.component.html
+++ b/findly-builder/src/app/components/structured-data/structured-data.component.html
@@ -220,8 +220,8 @@
     </perfect-scrollbar>
     <div class="footer-info" *ngIf="!isResultTemplate">
         <img class="info-icon" src="assets/icons/structured-data/Info.svg">
-        <div class="info-text">{{'structuredData.noResultTemplate' | translate}} <b>{{'structuredData.searchInterfacePath' | translate}}</b> {{'structuredData.toDefine' | translate}}<a href="#">{{'structuredData.learnMore' | translate}}</a></div>
-        <img src="assets/icons/close.svg" class="close-info">
+        <div class="info-text">{{'structuredData.noResultTemplate' | translate}} <span class="interface-link" (click)="navigateToSearchInterface()"><b>{{'structuredData.searchInterfacePath' | translate}}</b></span> {{'structuredData.toDefine' | translate}}<a href="#">{{'structuredData.learnMore' | translate}}</a></div>
+        <img src="assets/icons/close.svg" class="close-info" (click)="isResultTemplate = !isResultTemplate">
     </div>
 </div>
 
