--- a/findly-builder/src/app/components/dashboard/dashboard.component.html
+++ b/findly-builder/src/app/components/dashboard/dashboard.component.html
@@ -25,7 +25,8 @@
             <div class="top-cards-section row m-0" *ngIf="totalUsersStats && totalSearchesStats">
                 <div class="col cards-data">
                     <div class="content">
-                        <div class="title-info">{{'metrics.dash_board_view.total_user'| translate}}<img src="assets/icons/gray_info.svg" class="pl-1"></div>
+                        <div class="title-info">{{'metrics.dash_board_view.total_user'| translate}}
+                            <img src="assets/icons/gray_info.svg" placement="top-center" ngbTooltip="Number of unique users performed search during the selected period" [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1"></div>
                         <div class="bottom-sec">
                             <div class="left-sec">
                                 <div class="count">{{ totalUsersStats.totalUsers}}</div>
@@ -44,7 +45,8 @@
                 </div>
                 <div class="col cards-data">
                     <div class="content">
-                        <div class="title-info">{{'metrics.dash_board_view.total_searches'| translate}}<img src="assets/icons/gray_info.svg" class="pl-1"></div>
+                        <div class="title-info">{{'metrics.dash_board_view.total_searches'| translate}}
+                            <img src="assets/icons/gray_info.svg" ngbTooltip="Total number of searches performed during the selected period" placement="top-center" [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1"></div>
                         <div class="bottom-sec">
                             <div class="left-sec">
                                 <div class="count">{{ totalSearchesStats.totalSearches}}</div>
@@ -64,7 +66,8 @@
                 </div>
                 <div class="col cards-data">
                     <div class="content">
-                        <div class="title-info">{{'metrics.dash_board_view.result_rate'| translate}}<img src="assets/icons/gray_info.svg" class="pl-1"></div>
+                        <div class="title-info">{{'metrics.dash_board_view.result_rate'| translate}}
+                            <img src="assets/icons/gray_info.svg" placement="top-center" ngbTooltip="Total number of searches performed during the selected period" [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1"></div>
                         <div class="bottom-sec">
                             <div class="left-sec">
                                 <div class="count">{{totalSearchesStats.resultRate }}%</div>
@@ -83,7 +86,8 @@
                 </div>
                 <div class="col cards-data">
                     <div class="content">
-                        <div class="title-info">{{'metrics.dash_board_view.clicks'| translate}}<img src="assets/icons/gray_info.svg" class="pl-1"></div>
+                        <div class="title-info">{{'metrics.dash_board_view.clicks'| translate}}
+                            <img src="assets/icons/gray_info.svg" placement="top-center" ngbTooltip="No. of searches where at least one result was clicked on by the search user" [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1"></div>
                         <div class="bottom-sec">
                             <!-- <div class="left-sec">
                                 <div class="count">{{totalSearchesStats.ctr}}%</div>
@@ -111,7 +115,8 @@
                 </div>
                 <div class="col cards-data">
                     <div class="content">
-                        <div class="title-info">{{'metrics.dash_board_view.avg_click_position'| translate}}<img src="assets/icons/gray_info.svg" class="pl-1">
+                        <div class="title-info">{{'metrics.dash_board_view.avg_click_position'| translate}}
+                            <img src="assets/icons/gray_info.svg" placement="top-right" ngbTooltip="Average position of the clicks performed on the search results" [container]="'body'" tooltipClass="dashboard-custom-tooltips ml_12" class="pl-1">
                         </div>
                         <div class="bottom-sec">
                             <div class="left-sec">
