--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -33,73 +33,180 @@
                     </div>
                 </div>
             </div>
-            <div  class="container" *ngSwitchCase="'searchwidget'">
+            <div *ngSwitchCase="'searchwidget'">
                 <div class="search-widget">
                     <div class="label-text">Search Box Customization</div>
                     <div class="d-flex search-customization-input">
                         <div class="kr-sg-input-search">                               
-                            <input type="text" placeholder="Placeholder Text" class="input-search" (click)="selectSearchBox('inputBox');$event.stopPropagation();">
+                            <input type="text" class="input-search" (click)="selectSearchBox('inputBox');$event.stopPropagation();">
                             <img src="assets/icons/search_gray.svg" class="search-icon" (click)="selectSearchBox('inputIcon');$event.stopPropagation()">
-                             <span (click)="selectSearchBox('placeholderText');$event.stopPropagation()"></span>
+                             <span (click)="selectSearchBox('placeholderText');$event.stopPropagation()" class="placeholder-text">Placeholder Text</span>
                         </div>
-                        <button class="btn-customize kr-sg-button-primary btn_lg" (click)="selectSearchBox('button')" disabled>Button</button>
+                        <button class="btn-customize kr-sg-button-primary read-mode btn_lg" (click)="selectSearchBox('button')">
+                            <span>Button</span>
+                            <div class="hover-overlay-btn-img"><img src="assets/icons/search-experience/edit.svg"></div>
+                        </button>
                     </div>
-                    <div [ngSwitch]="selectSearch">
-                        <input
-                            [style.background]="color"
-                            [(colorPicker)]="color"
-                            [cpOutputFormat]="'hex'"
-                            (colorPickerOpen)="onEventLog('colorPickerOpen', $event)"
-                            (colorPickerClose)="onEventLog('colorPickerClose', $event)"
-                            (cpInputChange)="onEventLog('cpInputChange', $event)"
-                            (cpSliderDragStart)="onEventLog('cpSliderDragStart', $event)"
-                            (cpSliderDragEnd)="onEventLog('cpSliderDragEnd', $event)"
-                            readonly
-                          />
-                    <div class="fill-colors-block"  *ngSwitchCase="'inputBox'">
-                        <div class="fill-color">
-                            <div class="label-color">Fill Color</div>                            
-                            <div class="box-color"></div>
-                        </div>
-                        <div class="fill-color">
-                            <div class="label-color">Border Color</div>
-                            <div class="box-color"></div>
-                        </div>
-                    </div>
-                    <div class="drog-and-drop-block" *ngSwitchCase="'inputIcon'">
-                        <div class="img-block"><img src="assets/icons/search-experience/dummy-image.svg"></div>
-                        <div class="input-file">
-                            <div class="title">Drag and drop or <span class="browse">browse</span></div>
-                            <input type="file" name="avatar"/>
-                        </div>
-                    </div>
-                    <div class="fill-colors-block" *ngSwitchCase="'placeholderText'">
-                        <div class="fill-color">
-                            <div class="label-color">Text Color</div>
-                            <div class="box-color"></div>
-                        </div>
-                    </div>
-                    <div class="button-enable" *ngSwitchCase="'button'">
-                        <div class="label_text">Add Button</div>
-                        <label class="kr-sg-toggle">                                       
-                            <input type="checkbox">
-                            <div class="slider"><span class="enabled">Yes</span><span class="disabled">No</span></div>
-                        </label>
-                        <div class="kr-sg-input-text">
-                            <div class="label-text">Button Text</div>
-                            <input type="text" placeholder="Enter Name" class="input-text" disabled>                            
-                        </div>
-                        <div class="fill-colors-block">
+                    <div [ngSwitch]="selectSearch">                        
+                        <div class="fill-colors-block"  *ngSwitchCase="'inputBox'">
                             <div class="fill-color">
-                                <div class="label-color">Fill Color</div>
-                                <div class="box-color"></div>
+                                <div class="label-color">Fill Color</div>                            
+                                <div class="box-color color-pallet-container">
+                                    <input
+                                        [style.background]="color"
+                                        [(colorPicker)]="color"
+                                        [cpOutputFormat]="'hex'"
+                                        (colorPickerOpen)="onEventLog('colorPickerOpen', $event)"
+                                        (colorPickerClose)="onEventLog('colorPickerClose', $event)"
+                                        (cpInputChange)="onEventLog('cpInputChange', $event)"
+                                        (cpSliderDragStart)="onEventLog('cpSliderDragStart', $event)"
+                                        (cpSliderDragEnd)="onEventLog('cpSliderDragEnd', $event)"
+                                        readonly
+                                    />
+
+                                    <div class="box-color-content">
+                                        <div class="selected-previous-colors">
+                                           <div class="bg-color-selected"></div>
+                                           <div class="bg-color-selected"></div>
+                                           <div class="bg-color-selected"></div>
+                                           <div class="bg-color-selected"></div>
+                                           <div class="bg-color-selected"></div>
+                                        </div>
+                                        <div class="save-switch">Save Swatch</div>
+                                     </div>
+                                </div>
                             </div>
                             <div class="fill-color">
                                 <div class="label-color">Border Color</div>
-                                <div class="box-color"></div>
+                                <div class="box-color color-pallet-container">
+                                    <input
+                                        [style.background]="color"
+                                        [(colorPicker)]="color"
+                                        [cpOutputFormat]="'hex'"
+                                        (colorPickerOpen)="onEventLog('colorPickerOpen', $event)"
+                                        (colorPickerClose)="onEventLog('colorPickerClose', $event)"
+                                        (cpInputChange)="onEventLog('cpInputChange', $event)"
+                                        (cpSliderDragStart)="onEventLog('cpSliderDragStart', $event)"
+                                        (cpSliderDragEnd)="onEventLog('cpSliderDragEnd', $event)"
+                                        readonly
+                                    />
+
+                                    <div class="box-color-content">
+                                        <div class="selected-previous-colors">
+                                           <div class="bg-color-selected"></div>
+                                           <div class="bg-color-selected"></div>
+                                           <div class="bg-color-selected"></div>
+                                           <div class="bg-color-selected"></div>
+                                           <div class="bg-color-selected"></div>
+                                        </div>
+                                        <div class="save-switch">Save Swatch</div>
+                                     </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                        <div class="drog-and-drop-block" *ngSwitchCase="'inputIcon'">
+                            <div class="img-block"><img src="assets/icons/search-experience/dummy-image.svg"></div>
+                            <div class="input-file">
+                                <div class="title">Drag and drop or <span class="browse">browse</span></div>
+                                <input type="file" name="avatar"/>
+                            </div>
+                        </div>
+                        <div class="fill-colors-block" *ngSwitchCase="'placeholderText'">
+                            <div class="fill-color">
+                                <div class="label-color">Text Color</div>
+                                <div class="box-color color-pallet-container">
+                                    <input
+                                        [style.background]="color"
+                                        [(colorPicker)]="color"
+                                        [cpOutputFormat]="'hex'"
+                                        (colorPickerOpen)="onEventLog('colorPickerOpen', $event)"
+                                        (colorPickerClose)="onEventLog('colorPickerClose', $event)"
+                                        (cpInputChange)="onEventLog('cpInputChange', $event)"
+                                        (cpSliderDragStart)="onEventLog('cpSliderDragStart', $event)"
+                                        (cpSliderDragEnd)="onEventLog('cpSliderDragEnd', $event)"
+                                        readonly
+                                    />
+
+                                    <div class="box-color-content">
+                                        <div class="selected-previous-colors">
+                                           <div class="bg-color-selected"></div>
+                                           <div class="bg-color-selected"></div>
+                                           <div class="bg-color-selected"></div>
+                                           <div class="bg-color-selected"></div>
+                                           <div class="bg-color-selected"></div>
+                                        </div>
+                                        <div class="save-switch">Save Swatch</div>
+                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="button-enable" *ngSwitchCase="'button'">
+                            <div class="label_text">Add Button</div>
+                            <label class="kr-sg-toggle">                                       
+                                <input type="checkbox">
+                                <div class="slider"><span class="enabled">Yes</span><span class="disabled">No</span></div>
+                            </label>
+                            <div class="kr-sg-input-text">
+                                <div class="label-text">Button Text</div>
+                                <input type="text" placeholder="Enter Name" class="input-text">                            
+                            </div>
+                            <div class="fill-colors-block">
+                                <div class="fill-color">
+                                    <div class="label-color">Fill Color</div>
+                                    <div class="box-color color-pallet-container">
+                                        <input
+                                            [style.background]="color"
+                                            [(colorPicker)]="color"
+                                            [cpOutputFormat]="'hex'"
+                                            (colorPickerOpen)="onEventLog('colorPickerOpen', $event)"
+                                            (colorPickerClose)="onEventLog('colorPickerClose', $event)"
+                                            (cpInputChange)="onEventLog('cpInputChange', $event)"
+                                            (cpSliderDragStart)="onEventLog('cpSliderDragStart', $event)"
+                                            (cpSliderDragEnd)="onEventLog('cpSliderDragEnd', $event)"
+                                            readonly
+                                        />
+    
+                                        <div class="box-color-content">
+                                            <div class="selected-previous-colors">
+                                               <div class="bg-color-selected"></div>
+                                               <div class="bg-color-selected"></div>
+                                               <div class="bg-color-selected"></div>
+                                               <div class="bg-color-selected"></div>
+                                               <div class="bg-color-selected"></div>
+                                            </div>
+                                            <div class="save-switch">Save Swatch</div>
+                                         </div>
+                                    </div>
+                                </div>
+                                <div class="fill-color">
+                                    <div class="label-color">Border Color</div>
+                                    <div class="box-color color-pallet-container">
+                                        <input
+                                            [style.background]="color"
+                                            [(colorPicker)]="color"
+                                            [cpOutputFormat]="'hex'"
+                                            (colorPickerOpen)="onEventLog('colorPickerOpen', $event)"
+                                            (colorPickerClose)="onEventLog('colorPickerClose', $event)"
+                                            (cpInputChange)="onEventLog('cpInputChange', $event)"
+                                            (cpSliderDragStart)="onEventLog('cpSliderDragStart', $event)"
+                                            (cpSliderDragEnd)="onEventLog('cpSliderDragEnd', $event)"
+                                            readonly
+                                        />
+    
+                                        <div class="box-color-content">
+                                            <div class="selected-previous-colors">
+                                               <div class="bg-color-selected"></div>
+                                               <div class="bg-color-selected"></div>
+                                               <div class="bg-color-selected"></div>
+                                               <div class="bg-color-selected"></div>
+                                               <div class="bg-color-selected"></div>
+                                            </div>
+                                            <div class="save-switch">Save Swatch</div>
+                                         </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>         
             </div>
