Kora Fixes - FLY-1666, FLY-1665, FLY-1672, FLY-1676.

--- a/findly-builder/src/app/components/structured-data/structured-data.component.scss
+++ b/findly-builder/src/app/components/structured-data/structured-data.component.scss
@@ -493,7 +493,20 @@
 .children-expanded{
     padding: 10px 15px;
 }
-
+::ng-deep perfect-scrollbar .ps--active-y {
+    .ps__thumb-y {
+        width: 3px !important;
+    }
+    .ps__rail-y {
+        width: 3px !important;
+    }
+    .ps__thumb-x {
+        display: none !important;
+    }
+    .ps__rail-x {
+        display: none !important;
+    }
+}
 
 .interface-link{
     cursor: pointer;
